# monad-arith

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fourmolu.yaml  monad-arith.cabal
src/Control/Applicative/: Arithmetic.hs
src/Control/Applicative/Arithmetic/: OrphanNum.hs
