cabal-version:      3.0
name:               monad-arith
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             axionbuster
maintainer:         axionbuster@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Control.Applicative.Arithmetic
    -- other-modules:
    -- other-extensions:
    default-extensions:  DerivingVia, DefaultSignatures
    build-depends:    base ^>=4.19.2.0, transformers
    hs-source-dirs:   src
    default-language: Haskell2010
